# WheelyBot

./: CMakeLists.txt
Log/: dataLog.txt
include/: control.hpp  main.hpp  math.hpp  robot.hpp  simulation.hpp  trajectory.hpp
rsc/: wheelyBot.urdf
src/: control.cpp  main.cpp  math.cpp  robot.cpp  simulation.cpp  trajectory.cpp
